syntax = "proto3";

option csharp_namespace = "UserManagementService";

service UserService {
  rpc RegisterUser (UserRequest) returns (UserResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  rpc GetUserById (UserRequest) returns (User);
  rpc UpdateUser (User) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (UserResponse);
  rpc ListUsers (Empty) returns (UserList);
}

message Empty {}

message UserRequest {
  int32 id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;
}

message UserList {
  repeated User users = 1;
}
